--- a/finditems.html
+++ b/finditems.html
@@ -73,152 +73,152 @@
         <div class="item-card">
           <img src="images/clothing-1.jpg" alt="Sweater" />
           <h4>Sweater</h4>
-          <p>Description: Medium, blue and gray, knit/p>
-          <p>Location: Life Sciences Building (LSB)</p>
+          <p>Description: Medium, blue and gray, knit</p>
+          <p>Location Found: Life Sciences Building (LSB)</p>
         </div>
         <div class="item-card">
           <img src="images/clothing-2.jpg" alt="Shoes" />
           <h4>Shoes</h4>
           <p>Description: Blue lace-up sneakers</p>
-          <p>Location: Stephen L. Richards Building (RB)</p>
+          <p>Location Found: Stephen L. Richards Building (RB)</p>
         </div>
         <div class="item-card">
           <img src="images/clothing-3.jpg" alt="Leather Gloves" />
           <h4>Leather Gloves</h4>
           <p>Description: Red, leather, knit lining</p>
-          <p>Location: Tanner Building Parking Lot</p>
+          <p>Location Found: Tanner Building Parking Lot</p>
         </div>
         <div class="item-card">
           <img src="images/clothing-4.jpg" alt="Hat" />
           <h4>Bucket Hat</h4>
           <p>Description: Black</p>
-          <p>Location: Ernest L. Wilkinson Student Center (WSC)</p>
+          <p>Location Found: Ernest L. Wilkinson Student Center (WSC)</p>
         </div>
         <div class="item-card">
           <img src="images/clothing-5.jpg" alt="Shirt" />
           <h4>Shirt</h4>
           <p>Description: Pink</p>
-          <p>Location: Stephen L. Richards Building (RB)</p>
+          <p>Location Found: Stephen L. Richards Building (RB)</p>
         </div>
         <div class="item-card">
             <img src="images/electronics-1.jpg" alt="Bluetooth Speaker" />
             <h4>Bluetooth Speaker</h4>
             <p>Description: Mini portable black speaker</p>
-            <p>Location: Stephen L. Richards Building (RB)</p>
+            <p>Location Found: Stephen L. Richards Building (RB)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-2.jpg" alt="Headphones" />
             <h4>Bluetooth Headphones</h4>
             <p>Description: Over-ear, white </p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-3.jpg" alt="USB Drive" />
             <h4>USB Drive</h4>
             <p>Description: black with lightning cable</p>
-            <p>Location: Life Sciences Building (LSB)</p>
+            <p>Location Found: Life Sciences Building (LSB)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-4.jpg" alt="Graphing Calculator" />
             <h4>Graphing Calculator</h4>
             <p>Description: Black with stickers on case</p>
-            <p>Location: James E. Talmage Building</p>
+            <p>Location Found: James E. Talmage Building</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-5.jpg" alt="Tablet Stylus" />
             <h4>Smart Watch</h4>
             <p>Description: Pink smart watch with white band</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-1.jpg" alt="Watch" />
             <h4>Watch</h4>
             <p>Description: Brown leather strap, silver face</p>
-            <p>Location: Abraham O. Smoot Administration Building (ASB)</p>
+            <p>Location Found: Abraham O. Smoot Administration Building (ASB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-2.jpg" alt="Ring" />
             <h4>Engagement Ring</h4>
             <p>Description: Silver, pear, halo</p>
-            <p>Location: N. Eldon Tanner Building (TNRB)</p>
+            <p>Location Found: N. Eldon Tanner Building (TNRB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-3.jpg" alt="Sunglasses" />
             <h4>Sunglasses</h4>
             <p>Description: Blue lenses, round frame</p>
-            <p>Location: Music Building (MB)</p>
+            <p>Location Found: Music Building (MB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-4.jpg" alt="Claw Clip" />
             <h4>Claw Clip</h4>
             <p>Description: tan/brown, translucent</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-5.jpg" alt="Handbag" />
             <h4>Handbag</h4>
             <p>Description: Blue and white, floral pattern</p>
-            <p>Location: Museum of Art (MOA)</p>
+            <p>Location Found: Museum of Art (MOA)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-1.jpg" alt="Sketchbook" />
             <h4>Sketchbook</h4>
             <p>Description: Red, colored pencil drawings</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-2.jpg" alt="Makeup Bag" />
             <h4>Makeup Bag</h4>
             <p>Description: Silver, sparkly pouch with five makeup brushes</p>
-            <p>Location: Music Building (MB)</p>
+            <p>Location Found: Music Building (MB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-3.jpg" alt="Water Bottle" />
             <h4>Water Bottle</h4>
             <p>Description: Purple, metallic</p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-4.jpg" alt="Wallet" />
             <h4>Leather Wallet</h4>
             <p>Description: Brown with cards inside</p>
-            <p>Location: Heber Grant Building/Testing Center (HGB)</p>
+            <p>Location Found: Heber Grant Building/Testing Center (HGB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-5.jpg" alt="Prescription Glasses" />
             <h4>Prescription Glasses</h4>
             <p>Description: Brown, wood grain, case included</p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
           <div class="item-card">
             <img src="images/others-1.jpg" alt="Keys" />
             <h4>Car Keys</h4>
             <p>Description: Key fob, car key, small key</p>
-            <p>Location: Joseph F. Smith Building (JFSB)</p>
+            <p>Location Found: Joseph F. Smith Building (JFSB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-2.jpg" alt="Weights" />
             <h4>Exercise Weights</h4>
             <p>Description: Blue, 2kg </p>
-            <p>Location: Stephen L. Richards Building (RB)</p>
+            <p>Location Found: Stephen L. Richards Building (RB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-3.jpg" alt="Art Supplies" />
             <h4>Misc Art Supplies</h4>
             <p>Description: Charcoal pencil, eraser, 2 black pen, mechanical pencil</p>
-            <p>Location: Engineering Building (EB)</p>
+            <p>Location Found: Engineering Building (EB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-4.jpg" alt="Game Blocks" />
             <h4>Game Blocks</h4>
             <p>Description: Game blocks with container</p>
-            <p>Location: Ernest L. Wilkinson Student Center (WSC)</p>
+            <p>Location Found: Ernest L. Wilkinson Student Center (WSC)</p>
           </div>
           <div class="item-card">
             <img src="images/others-5.jpg" alt="Tote Bag" />
             <h4>Tote Bag</h4>
             <p>Description: Black</p>
-            <p>Location: Jesse Knight Building (JKB)</p>
+            <p>Location Found: Jesse Knight Building (JKB)</p>
           </div>
       </div>
   </section>
@@ -230,32 +230,32 @@
       <div class="item-card">
         <img src="images/clothing-1.jpg" alt="Sweater" />
         <h4>Sweater</h4>
-        <p>Description: Medium, blue and gray, knit/p>
-        <p>Location: Life Sciences Building (LSB)</p>
+        <p>Description: Medium, blue and gray, knit</p>
+        <p>Location Found: Life Sciences Building (LSB)</p>
       </div>
       <div class="item-card">
         <img src="images/clothing-2.jpg" alt="Shoes" />
         <h4>Shoes</h4>
         <p>Description: Blue lace-up sneakers</p>
-        <p>Location: Stephen L. Richards Building (RB)</p>
+        <p>Location Found: Stephen L. Richards Building (RB)</p>
       </div>
       <div class="item-card">
         <img src="images/clothing-3.jpg" alt="Leather Gloves" />
         <h4>Leather Gloves</h4>
         <p>Description: Red, leather, knit lining</p>
-        <p>Location: Tanner Building Parking Lot</p>
+        <p>Location Found: Tanner Building Parking Lot</p>
       </div>
       <div class="item-card">
         <img src="images/clothing-4.jpg" alt="Hat" />
         <h4>Bucket Hat</h4>
         <p>Description: Black</p>
-        <p>Location: Ernest L. Wilkinson Student Center (WSC)</p>
+        <p>Location Found: Ernest L. Wilkinson Student Center (WSC)</p>
       </div>
       <div class="item-card">
         <img src="images/clothing-5.jpg" alt="Shirt" />
         <h4>Shirt</h4>
         <p>Description: Pink</p>
-        <p>Location: Stephen L. Richards Building (RB)</p>
+        <p>Location Found: Stephen L. Richards Building (RB)</p>
       </div>
     </div>
   </section>
@@ -268,31 +268,31 @@
             <img src="images/electronics-1.jpg" alt="Bluetooth Speaker" />
             <h4>Bluetooth Speaker</h4>
             <p>Description: Mini portable black speaker</p>
-            <p>Location: Stephen L. Richards Building (RB)</p>
+            <p>Location Found: Stephen L. Richards Building (RB)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-2.jpg" alt="Headphones" />
             <h4>Bluetooth Headphones</h4>
             <p>Description: Over-ear, white </p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-3.jpg" alt="USB Drive" />
             <h4>USB Drive</h4>
             <p>Description: black with lightning cable</p>
-            <p>Location: Life Sciences Building (LSB)</p>
+            <p>Location Found: Life Sciences Building (LSB)</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-4.jpg" alt="Graphing Calculator" />
             <h4>Graphing Calculator</h4>
             <p>Description: Black with stickers on case</p>
-            <p>Location: James E. Talmage Building</p>
+            <p>Location Found: James E. Talmage Building</p>
           </div>
           <div class="item-card">
             <img src="images/electronics-5.jpg" alt="Tablet Stylus" />
             <h4>Smart Watch</h4>
             <p>Description: Pink smart watch with white band</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
     </div>
   </section>
@@ -305,31 +305,31 @@
             <img src="images/accessories-1.jpg" alt="Watch" />
             <h4>Watch</h4>
             <p>Description: Brown leather strap, silver face</p>
-            <p>Location: Abraham O. Smoot Administration Building (ASB)</p>
+            <p>Location Found: Abraham O. Smoot Administration Building (ASB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-2.jpg" alt="Ring" />
             <h4>Engagement Ring</h4>
             <p>Description: Silver, pear, halo</p>
-            <p>Location: N. Eldon Tanner Building (TNRB)</p>
+            <p>Location Found: N. Eldon Tanner Building (TNRB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-3.jpg" alt="Sunglasses" />
             <h4>Sunglasses</h4>
             <p>Description: Blue lenses, round frame</p>
-            <p>Location: Music Building (MB)</p>
+            <p>Location Found: Music Building (MB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-4.jpg" alt="Claw Clip" />
             <h4>Claw Clip</h4>
             <p>Description: tan/brown, translucent</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
           <div class="item-card">
             <img src="images/accessories-5.jpg" alt="Handbag" />
             <h4>Handbag</h4>
             <p>Description: Blue and white, floral pattern</p>
-            <p>Location: Museum of Art (MOA)</p>
+            <p>Location Found: Museum of Art (MOA)</p>
           </div>
     </div>
   </section>
@@ -342,31 +342,31 @@
             <img src="images/personal-1.jpg" alt="Sketchbook" />
             <h4>Sketchbook</h4>
             <p>Description: Red, colored pencil drawings</p>
-            <p>Location: West Campus Central Building (WCCB)</p>
+            <p>Location Found: West Campus Central Building (WCCB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-2.jpg" alt="Makeup Bag" />
             <h4>Makeup Bag</h4>
             <p>Description: Silver, sparkly pouch with five makeup brushes</p>
-            <p>Location: Music Building (MB)</p>
+            <p>Location Found: Music Building (MB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-3.jpg" alt="Water Bottle" />
             <h4>Water Bottle</h4>
             <p>Description: Purple, metallic</p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-4.jpg" alt="Wallet" />
             <h4>Leather Wallet</h4>
             <p>Description: Brown with cards inside</p>
-            <p>Location: Heber Grant Building/Testing Center (HGB)</p>
+            <p>Location Found: Heber Grant Building/Testing Center (HGB)</p>
           </div>
           <div class="item-card">
             <img src="images/personal-5.jpg" alt="Prescription Glasses" />
             <h4>Prescription Glasses</h4>
             <p>Description: Brown, wood grain, case included</p>
-            <p>Location: Harold B. Lee Library (HBLL)</p>
+            <p>Location Found: Harold B. Lee Library (HBLL)</p>
           </div>
     </div>
   </section>
@@ -379,31 +379,31 @@
             <img src="images/others-1.jpg" alt="Keys" />
             <h4>Car Keys</h4>
             <p>Description: Key fob, car key, small key</p>
-            <p>Location: Joseph F. Smith Building (JFSB)</p>
+            <p>Location Found: Joseph F. Smith Building (JFSB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-2.jpg" alt="Weights" />
             <h4>Exercise Weights</h4>
             <p>Description: Blue, 2kg </p>
-            <p>Location: Stephen L. Richards Building (RB)</p>
+            <p>Location Found: Stephen L. Richards Building (RB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-3.jpg" alt="Art Supplies" />
             <h4>Misc Art Supplies</h4>
             <p>Description: Charcoal pencil, eraser, 2 black pen, mechanical pencil</p>
-            <p>Location: Engineering Building (EB)</p>
+            <p>Location Found: Engineering Building (EB)</p>
           </div>
           <div class="item-card">
             <img src="images/others-4.jpg" alt="Game Blocks" />
             <h4>Game Blocks</h4>
             <p>Description: Game blocks with container</p>
-            <p>Location: Ernest L. Wilkinson Student Center (WSC)</p>
+            <p>Location Found: Ernest L. Wilkinson Student Center (WSC)</p>
           </div>
           <div class="item-card">
             <img src="images/others-5.jpg" alt="Tote Bag" />
             <h4>Tote Bag</h4>
             <p>Description: Black</p>
-            <p>Location: Jesse Knight Building (JKB)</p>
+            <p>Location: Found Jesse Knight Building (JKB)</p>
           </div>
     </div>
   </section>
