--- a/testimonials.html
+++ b/testimonials.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Testimonials</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="testimonials.css" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
       </head>
       
@@ -23,6 +24,64 @@
       <a href="portfolio.html">Portfolio</a>
     </nav>
   </header>
+ <!-- Testimonials -->
+    <main class="testimonials">
+
+      <!-- Row 1: image left, quote right (overlapping) -->
+      <section class="row left">
+        <div class="image">
+          <img src="images/test-1.jpg" alt="Stationery items floating on a desk" />
+        </div>
+        <blockquote class="quote-card">
+          <p>
+            “I used to have to search many different building for things I lost.
+            Now, I can just use this website and know instantly which building to
+            find them in!” <span class="author">– Russ Nelson</span>
+          </p>
+        </blockquote>
+      </section>
+
+      <!-- Row 2: quote left, image right (overlapping) -->
+      <section class="row right">
+        <blockquote class="quote-card">
+          <p>
+            “I was so worried when I lost my brand new Hydroflask. Thanks to this
+            website, I was able to get it back the next day.”
+            <span class="author">– Henry Eyring</span>
+          </p>
+        </blockquote>
+        <div class="image">
+          <img src="images/test-2.jpg" alt="Fruit and bottles" />
+        </div>
+      </section>
+
+      <!-- Row 3: image left, quote right -->
+      <section class="row left">
+        <div class="image">
+          <img src="images/test-3.jpg" alt="Aerial view of pine trees" />
+        </div>
+        <blockquote class="quote-card">
+          <p>
+            “I thought I would never find the manuscript I lost on campus, but I
+            checked this website and, sure enough, it was in the Wilkinson Student
+            Center!” <span class="author">– Joe Smith</span>
+          </p>
+        </blockquote>
+      </section>
+
+      <!-- Row 4: quote left, image right -->
+      <section class="row right">
+        <blockquote class="quote-card">
+          <p>
+            “This site is legit.” <span class="author">– Brigham Y. Oung</span>
+          </p>
+        </blockquote>
+        <div class="image">
+          <img src="images/test-4.jpg" alt="Sports balls" />
+        </div>
+      </section>
+
+    </main>
 
     <footer>
     <p>
