--- a/locations.html
+++ b/locations.html
@@ -71,7 +71,7 @@
       </section>
 <section>
       <div class="campus-banner" role="note">
-  All campus Lost & Found items are to the
+  All campus Lost & Found items are brought to the
   <strong>WSC Lost & Found</strong> at the end of the day.
 </div>
 </section>
